--- a/html/about.html
+++ b/html/about.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset.css" type="text/css">
-    <link rel="stylesheet" href="./css/style.css" type="text/css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/reset.css" type="text/css" />
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <title>Through the Years - About</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header class="header border-5">
+      <nav class="nav">
+        <ul class="nav-list">
+          <li><a href="./about.html">Through the Years</a></li>
+          <li><a href="./timeline.html">Timeline</a></li>
+        </ul>
+      </nav>
+    </header>
+    <p>THIS IS THE ABOUT PAGE</p>
+  </body>
 </html>
