[Init] about content

--- a/html/about.html
+++ b/html/about.html
@@ -17,6 +17,17 @@
         </ul>
       </nav>
     </header>
-    <p>THIS IS THE ABOUT PAGE</p>
+    <main class="about-main">
+      <h1 class="h1">About</h1>
+      <p class="p">
+        A place to journey back <b class="italicize">through the years</b> with
+        Arcadia High School(CA)'s Indoor Percussion Ensembles.
+        <br />
+        Enjoy shows and pictures of the ensembles.
+        <br />
+        May it be a place of fond memories for all who were involved and
+        inspiration for those to come~
+      </p>
+    </main>
   </body>
 </html>
