[Init] timeline markup

--- a/html/timeline.html
+++ b/html/timeline.html
@@ -17,6 +17,26 @@
         </ul>
       </nav>
     </header>
-    <p>this is the TIMELINE PAGE</p>
+    <main class="timeline-main border-5">
+      <section class="profile-section border-5">
+        <h1 class="h1 year border-5">INSERT YEAR</h1>
+        <section class="gallery border-5">
+          <video src="" poster="" class="gallery__video" controls></video>
+          <section class="gallery__images">
+            <img src="" alt="" class="image-preview" />
+            <img src="" alt="" class="image-preview" />
+            <img src="" alt="" class="image-preview" />
+          </section>
+        </section>
+        <section class="summary border-5">
+          <h2 class="h2">SHOW NAME GOES HERE</h2>
+          <div class="classification">Class<span>CLASS GOES HERE</span></div>
+          <div class="awards">Award <span>AWARD GOES HERE</span></div>
+          <p class="description">THIS IS THE DESCRIPTION</p>
+          <section class="instructors"></section>
+          <section class="members"></section>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
