--- a/html/timeline.html
+++ b/html/timeline.html
@@ -19,21 +19,45 @@
     </header>
     <main class="timeline-main border-5">
       <section class="profile-section border-5">
-        <h1 class="h1 year border-5">INSERT YEAR</h1>
+        <h1 class="h1 year border-5">2015</h1>
         <section class="gallery border-5">
-          <video src="" poster="" class="gallery__video" controls></video>
+          <video
+            src="../static/videos/2015_world_process_of_invention_wgi_prelims.mp4"
+            poster="../static/images/2015/the-process-of-invention1.jpg"
+            class="gallery__video"
+            preload="metadata"
+            controls
+          >
+            <p>Sorry, Your browser does not support HTML video.</p>
+          </video>
           <section class="gallery__images">
-            <img src="" alt="" class="image-preview" />
-            <img src="" alt="" class="image-preview" />
-            <img src="" alt="" class="image-preview" />
+            <img
+              src="../static/images/2015/the-process-of-invention1.jpg"
+              alt="The process of invention floor design."
+              class="image-preview"
+            />
+            <img
+              src="../static/images/2015/the-process-of-invention2.jpg"
+              alt="Arron Duran doing a stick flip"
+              class="image-preview"
+            />
+            <img
+              src="../static/images/2015/the-process-of-invention3.jpg"
+              alt="2015 battery warm up in the lot at WGI Championship"
+              class="image-preview"
+            />
           </section>
         </section>
         <section class="summary border-5">
-          <h2 class="h2">SHOW NAME GOES HERE</h2>
+          <h2 class="h2 show-title">SHOW NAME GOES HERE</h2>
           <div class="classification">Class<span>CLASS GOES HERE</span></div>
           <div class="awards">Award <span>AWARD GOES HERE</span></div>
           <p class="description">THIS IS THE DESCRIPTION</p>
-          <section class="instructors"></section>
+          <section class="instructors">
+            <ul>
+              <li></li>
+            </ul>
+          </section>
           <section class="members"></section>
         </section>
       </section>
