[Update] summary with mock data and basic styling

--- a/html/timeline.html
+++ b/html/timeline.html
@@ -49,16 +49,82 @@
           </section>
         </section>
         <section class="summary border-5">
-          <h2 class="h2 show-title">SHOW NAME GOES HERE</h2>
-          <div class="classification">Class<span>CLASS GOES HERE</span></div>
-          <div class="awards">Award <span>AWARD GOES HERE</span></div>
-          <p class="description">THIS IS THE DESCRIPTION</p>
+          <h2 class="h2 show-title">Process of Invention</h2>
+          <div class="classification">
+            <span class="upper-case pad-right-10 summary__label">Class</span>
+            <span><i>World</i></span>
+          </div>
+          <div class="awards">
+            <span class="upper-case pad-right-10 summary__label">Award</span>
+            <span>SCPA - <i>Bronze</i> | WGI - <i>Finalist 4th</i></span>
+          </div>
+          <p class="p description">
+            Music arranged & composed by Kevin Shah, Tony Nuñez and Stephen
+            Ridley*
+            <br />
+            Direction & Program Coordination: Tony Nuñez Video<br />
+            Animation: Adam Adorno
+            <br />
+            Illustration: Maggie Chiang
+            <br />
+            Mobile TV design & fabrication: Jeff Doolittle and John Tallon
+            <br />
+            Media logistics: Jeff Doolittle, Tony Nuñez and Adam Adorno
+            <br />
+            Additional Animation: Nick Lai
+          </p>
           <section class="instructors">
-            <ul>
-              <li></li>
+            <h3 class="h3 upper-case pad-bottom-10 summary__label">
+              instructors
+            </h3>
+            <ul class="instructors-ul">
+              <li>Kevin Sherrill</li>
+              <li>Tony Nunez</li>
+              <li>Kevin Shah</li>
+              <li>Jesus Alcantar</li>
+              <li>Philip Idell</li>
+              <li>Vanessa Vendiola</li>
+              <li>Nick Arce</li>
+              <li>James Catherall</li>
             </ul>
           </section>
-          <section class="members"></section>
+          <section class="members">
+            <h3 class="h3 upper-case pad-bottom-10 summary__label">members</h3>
+            <ul class="members-ul">
+              <li>Aaron Ho</li>
+              <li>AJ Ocampo</li>
+              <li>Allison Kuo</li>
+              <li>Andrew Yen</li>
+              <li>Annie Chen</li>
+              <li>Arron Duran</li>
+              <li>Brandon Carone</li>
+              <li>Chalisar Vasnanrungruengkul</li>
+              <li>Chris Valladares</li>
+              <li>Chris Zaki</li>
+              <li>Eric Ly</li>
+              <li>Garrett Foster</li>
+              <li>Greg Van Kirk</li>
+              <li>Isabell Liao</li>
+              <li>Ishaan Dev</li>
+              <li>Jessica Repko</li>
+              <li>Josephine Yip</li>
+              <li>Kenneth Sanhueza</li>
+              <li>Kristie Lau</li>
+              <li>Lizbeth Walla</li>
+              <li>Madeline Ganley</li>
+              <li>Mark Salvacion</li>
+              <li>Melody Hsueh</li>
+              <li>Nick Sosa</li>
+              <li>Paul Mekailian</li>
+              <li>Richard Kith</li>
+              <li>Sean Carrington</li>
+              <li>Shirley Duong</li>
+              <li>Tiffany Lau</li>
+              <li>Tyler Long</li>
+              <li>Wes Pickering</li>
+              <li>Yuma Kikuta</li>
+            </ul>
+          </section>
         </section>
       </section>
     </main>
