[Updated] anchor tag styling [removed] temporary borders

--- a/html/timeline.html
+++ b/html/timeline.html
@@ -9,18 +9,24 @@
     <title>Through the Years - Timeline</title>
   </head>
   <body>
-    <header class="header border-5">
+    <header class="header">
       <nav class="nav">
         <ul class="nav-list">
-          <li><a href="./about.html">Through the Years</a></li>
-          <li><a href="./timeline.html">Timeline</a></li>
+          <li>
+            <a class="nav-list__anchor" href="./about.html"
+              >Through the Years</a
+            >
+          </li>
+          <li>
+            <a class="nav-list__anchor" href="./timeline.html">Timeline</a>
+          </li>
         </ul>
       </nav>
     </header>
-    <main class="timeline-main border-5">
-      <section class="profile-section border-5">
-        <h1 class="h1 year border-5">2015</h1>
-        <section class="gallery border-5">
+    <main class="timeline-main">
+      <section class="profile-section">
+        <h1 class="h1 year">2015</h1>
+        <section class="gallery">
           <video
             src="../static/videos/2015_world_process_of_invention_wgi_prelims.mp4"
             poster="../static/images/2015/the-process-of-invention1.jpg"
@@ -48,7 +54,7 @@
             />
           </section>
         </section>
-        <section class="summary border-5">
+        <section class="summary">
           <h2 class="h2 show-title">Process of Invention</h2>
           <div class="classification">
             <span class="upper-case pad-right-10 summary__label">Class</span>
