[Updated] all header to timeline html header

--- a/html/about.html
+++ b/html/about.html
@@ -9,11 +9,17 @@
     <title>Through the Years - About</title>
   </head>
   <body>
-    <header class="header border-5">
+    <header class="header">
       <nav class="nav">
         <ul class="nav-list">
-          <li><a href="./about.html">Through the Years</a></li>
-          <li><a href="./timeline.html">Timeline</a></li>
+          <li>
+            <a class="nav-list__anchor" href="./about.html"
+              >Through the Years</a
+            >
+          </li>
+          <li>
+            <a class="nav-list__anchor" href="./timeline.html">Timeline</a>
+          </li>
         </ul>
       </nav>
     </header>
