--- a/html/about.html
+++ b/html/about.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <link rel="stylesheet" href="../css/reset.css" type="text/css" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <title>Through the Years - About</title>
@@ -18,7 +21,9 @@
             >
           </li>
           <li>
-            <a class="nav-list__anchor" href="./timeline.html">Timeline</a>
+            <a class="nav-list__anchor" href="./timeline.html"
+              >Timeline</a
+            >
           </li>
         </ul>
       </nav>
@@ -26,13 +31,14 @@
     <main class="about-main">
       <h1 class="h1">About</h1>
       <p class="p">
-        A place to journey back <b class="italicize">through the years</b> with
-        Arcadia High School(CA)'s Indoor Percussion Ensembles.
+        A place to journey back
+        <b class="italicize">through the years</b> with Arcadia High
+        School(CA)'s Indoor Percussion Ensembles.
         <br />
         Enjoy shows and pictures of the ensembles.
         <br />
-        May it be a place of fond memories for all who were involved and
-        inspiration for those to come~
+        May it be a place of fond memories for all who were involved
+        and inspiration for those to come~
       </p>
     </main>
   </body>
