--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <link rel="stylesheet" href="./css/reset.css" type="text/css" />
     <link rel="stylesheet" href="./css/style.css" type="text/css" />
     <title>Through the Years - Arcadia Percusion Ensemble</title>
@@ -18,7 +21,9 @@
             >
           </li>
           <li>
-            <a class="nav-list__anchor" href="./timeline.html">Timeline</a>
+            <a class="nav-list__anchor" href="./timeline.html"
+              >Timeline</a
+            >
           </li>
         </ul>
       </nav>
